test/features/errors/semantic/e1076_unknown_intrinsic.spl
# E1076: Unknown Intrinsic

Feature: E1076 - Unknown Compiler Intrinsic
  As a Simple compiler
  I want to detect unknown compiler intrinsics
  So that only valid intrinsics are used

  Background:
    Given I have the Simple compiler

  Scenario: Unknown intrinsic name
    When I compile:
      '''
      fn test():
        val x = intrinsic_does_not_exist()  # Error
      '''
    Then I should see error E1076 at line 2
    And the error message should be "unknown compiler intrinsic `{intrinsic}`"
    And the label should indicate "intrinsic not found"
    And the help should suggest "check the intrinsic name or use a standard library function"

  Scenario: Valid intrinsic
    When I compile:
      '''
      fn test():
        val s = size_of<i32>()  # OK: known intrinsic
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val x = invalid_intrinsic()
      '''
    Then I should see error E1076
    And the error message should contain "알 수 없는 내장 함수"
